# euphoxide

./: CHANGELOG.md  Cargo.toml  rust-toolchain.toml
euphoxide/: Cargo.toml
euphoxide-bot/: Cargo.toml
euphoxide-bot/examples/: examplebot.rs  examplebot_instance.rs
euphoxide-bot/src/: bot.rs  command.rs  config.rs  instance.rs  instances.rs  lib.rs
euphoxide-bot/src/command/: bang.rs  basic.rs  botrulez.rs  clap.rs  hidden.rs  prefixed.rs
euphoxide-bot/src/command/botrulez/: full_help.rs  ping.rs  short_help.rs  uptime.rs
euphoxide-client/: Cargo.toml
euphoxide-client/examples/: examplebot_multi.rs  examplebot_single.rs
euphoxide-client/src/: builder.rs  client.rs  clients.rs  config.rs  lib.rs  multi.rs  single.rs
euphoxide-command/: Cargo.toml
euphoxide-command/examples/: examplebot.rs  examplebot_command.rs
euphoxide-command/src/: bang.rs  basic.rs  clap.rs  lib.rs
euphoxide-command/src/botrulez/: full_help.rs  ping.rs  short_help.rs  uptime.rs
euphoxide/examples/: examplebot.rs  examplebot_basic.rs
euphoxide/src/: api.rs  client.rs  conn.rs  emoji.rs  error.rs  lib.rs  nick.rs  replies.rs
euphoxide/src/api/: account_cmds.rs  events.rs  packets.rs  types.rs
euphoxide/src/client/: conn.rs  state.rs
examples/: examplebot.rs  testbot.rs  testbot_commands.rs  testbot_instance.rs  testbot_instances.rs  testbot_manual.rs
src/: api.rs  bot.rs  client.rs  conn.rs  emoji.json  emoji.rs  emoji.txt  error.rs  huehash.rs  lib.rs  nick.rs  replies.rs
src/api/: account_cmds.rs  events.rs  packet.rs  packets.rs  room_cmds.rs  session_cmds.rs  types.rs
src/bot/: botrulez.rs  command.rs  commands.rs  instance.rs  instances.rs
src/bot/botrulez/: full_help.rs  ping.rs  short_help.rs  uptime.rs
src/bot/command/: bang.rs  clap.rs  hidden.rs  prefixed.rs
src/client/: conn.rs
