[workspace]
resolver = "3"
members = ["euphoxide", "euphoxide-client", "euphoxide-command"]

[workspace.package]
version = "0.7.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.89"
caseless = "0.2.2"
clap = { version = "4.6.1", default-features = false, features = ["std"] }
cookie = "0.18.1"
futures-util = "0.3.32"
jiff = { version = "0.2.23", default-features = false, features = ["std"] }
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.52.1"
tokio-tungstenite = "0.29.0"
unicode-normalization = "0.1.25"
# For examples
anyhow = "1.0.102"
rustls = "0.23.38"
# In this workspace
euphoxide = { path = "./euphoxide" }
euphoxide-client = { path = "./euphoxide-client" }
euphoxide-command = { path = "./euphoxide-command" }

[workspace.lints]
rust.unsafe_code = { level = "forbid", priority = 1 }
# Lint groups
rust.deprecated-safe = "warn"
rust.future-incompatible = "warn"
rust.keyword-idents = "warn"
rust.nonstandard-style = "warn"
rust.refining-impl-trait = "warn"
rust.rust-2018-idioms = "warn"
rust.unknown-or-malformed-diagnostic-attributes = "warn"
rust.unused = "warn"
# Individual lints
rust.redundant_imports = "warn"
rust.redundant_lifetimes = "warn"
rust.single_use_lifetimes = "warn"
rust.unit_bindings = "warn"
rust.unnameable_types = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"
# Clippy
clippy.large_enum_variant = "allow"
clippy.use_self = "warn"
