[package]
name = "euphoxide-bot"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
cookie = { workspace = true }
euphoxide = { path = "../euphoxide" }
jiff = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tokio-tungstenite = { workspace = true }

[lints]
workspace = true
