[package]
name = "euphoxide-bot"
version = { workspace = true }
edition = { workspace = true }

[features]
clap = ["dep:clap"]

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, optional = true }
cookie = { workspace = true }
euphoxide = { path = "../euphoxide" }
jiff = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tokio-tungstenite = { workspace = true }

[lints]
workspace = true
