[package]
name = "euphoxide-bot"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[features]
clap = ["dep:clap"]

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, optional = true, features = ["derive"] }
cookie = { workspace = true }
euphoxide = { workspace = true }
euphoxide-client = { workspace = true }
jiff = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }

[lints]
workspace = true
