[package]
name = "euphoxide-client"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
cookie = { workspace = true }
euphoxide = { workspace = true }
jiff = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
