[package]
name = "euphoxide-command"
version = { workspace = true }
edition = { workspace = true }

[features]
clap = ["dep:clap"]

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, optional = true, features = ["derive"] }
euphoxide = { workspace = true }
euphoxide-client = { workspace = true }
jiff = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }

[[example]]
name = "examplebot_command"
required-features = ["clap"]

[lints]
workspace = true
