[package]
name = "euphoxide-command"
version = { workspace = true }
edition = { workspace = true }

[features]
clap = ["dep:clap"]

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, optional = true, features = ["derive"] }
euphoxide = { workspace = true }
euphoxide-client = { workspace = true }
jiff = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[[example]]
name = "examplebot_command"
required-features = ["clap"]

[lints]
workspace = true
