[package]
name = "euphoxide"
edition = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }

[dependencies]
caseless = { workspace = true }
futures-util = { workspace = true }
jiff = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tokio-tungstenite = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }

[lints]
workspace = true
