[package]
name = "euphoxide"
edition = { workspace = true }
version = { workspace = true }

[features]
default = ["tls"]
tls = ["dep:rustls", "tokio-tungstenite/rustls-tls-native-roots"]

[dependencies]
caseless = { workspace = true }
futures-util = { workspace = true }
jiff = { workspace = true }
log = { workspace = true }
rustls = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tokio-tungstenite = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
